Corrige la gestion des catégories
Une catégorie nouvellement créée n'apparaissait jamais sur l'écran caisse.
En corrigeant ce point, plusieurs incohérences liées aux catégories sont
apparues ; elles sont traitées ici.

Catégorie créée mais invisible
------------------------------

findAllCategories() dérivait la liste des catégories depuis les produits :

    SELECT DISTINCT c.nom FROM categories c
    INNER JOIN produits p ON p.category_id = c.id

Une catégorie sans produit n'a aucune ligne côté produits : la jointure
interne l'éliminait. Elle restait donc introuvable en caisse tant qu'on ne
lui avait pas rattaché un produit, sans aucun message.

Sur la base de production, 4 catégories sur 7 étaient concernées
(Divers, Hygiène, kfkkfkf, hhhhhhh) : seules Alimentaire, Boissons et
Tabac étaient affichées.

La table categories fait désormais référence ; les valeurs de l'ancienne
colonne texte produits.categorie sont ajoutées ensuite, pour les produits
importés sans équivalent dans la table.

Même produit, classement différent selon la requête
---------------------------------------------------

findAll() résolvait la catégorie via COALESCE(c.nom, p.categorie) alors que
findById(), findByCodeBarre() et findByNomExact() renvoyaient la colonne
texte brute. Après le renommage d'une catégorie, la caisse — qui passe par
findById() — classait le produit autrement que la liste des produits, ce qui
faussait la détection tabac / frak cigarette au moment d'encaisser.

Toutes les lectures partagent maintenant la même projection (SELECT_PRODUIT).

Contenu variable d'une même catégorie
-------------------------------------

findByCategoryId() filtrait sur quantite_stock > 0, contrairement à
findByCategorie(). Une catégorie ouverte par son identifiant masquait donc
les produits en rupture, qui disparaissaient de l'inventaire sans explication.
Filtre supprimé.

Renommage et suppression
------------------------

- Renommer une catégorie met à jour produits.categorie dans la même
  tra